# hack-table

./: .gitignore  CHANGELOG.md  LICENSE  Research.md  devbox.json  flake.nix  hack-table.cabal  kademlia.cabal
app/: Main.hs
docs/: 1-introduction.md  2-system-description.md  2.1-xor-metric.md  2.2-node-state.md  2.3-kademlia-protocol.md  2.4-routing-table.md  2.5-efficient-key-republishing.md  3-sketch-of-proof.md  4-implementation-notes.md  4.1-optimized-contact-accounting.md  4.2-accelerated-lookups.md  5-summary-and-references.md
lib/: Kademlia.hs
lib/Kademlia/: Metric.hs  SerDe.hs  Types.hs
lib/Kademlia/Types/: Block.hs  KBucket.hs  Key.hs  Node.hs  Range.hs  RoutingTable.hs  Word160.hs
test/: KademliaSpec.hs  Main.hs  Spec.hs  Word160Spec.hs
test/Spec/: Block.hs  KBucket.hs  Kademlia.hs  RoutingTable.hs  Word160.hs
