cabal-version:       2.4
name:                kademlia
version:             0.1.0.0
synopsis:            A Haskell implementation of the Kademlia distributed hash table
description:         This project implements the Kademlia distributed hash table protocol in Haskell.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Josh Godsiff
maintainer:          josh.godsiff@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Kademlia
                     , Kademlia.Types
                     , Kademlia.Types.Word160
  build-depends:       base ^>=4.18.2.1
                     , text
                     , bytestring
                     , vector
                     , containers
                     , binary
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall

executable kademlia-exe
  main-is:             Main.hs
  build-depends:       base ^>=4.18.2.1
                     , kademlia
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite kademlia-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       KademliaSpec
  build-depends:       base ^>=4.18.2.1
                     , kademlia
                     , tasty
                     , tasty-hunit
                     , tasty-discover
                     , tasty-hedgehog
                     , hedgehog
                     , vector
                     , bytestring
                     , text
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   tasty-discover:tasty-discover