cabal-version:       3.14
name:                kademlia
version:             0.1.0.0
synopsis:            A Haskell implementation of the Kademlia distributed hash table
description:         This project implements the Kademlia distributed hash table protocol in Haskell.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Josh Godsiff
maintainer:          josh.godsiff@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Kademlia
                     , Kademlia.Metric
                     , Kademlia.SerDe
                     , Kademlia.Types.KBucket
                     , Kademlia.Types.Key
                     , Kademlia.Types.Node
                     , Kademlia.Types.Word160
                     , Kademlia.Types.RoutingTable
                     , Kademlia.Types.Block
  build-depends:       base ^>=4.19.2
                     , binary
                     , bytestring
                     , containers
                     , fingertree
                     , text
                     , vector
                     , data-dword
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall

executable kademlia-exe
  main-is:             Main.hs
  build-depends:       base ^>=4.19.2
                     , kademlia
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite kademlia-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Spec.Kademlia
                     , Spec.Word160
                     , Spec.KBucket
                     , Spec.RoutingTable
                     , Spec.Block
                     , Gen.Kademlia
  build-depends:       base ^>=4.19.2
                     , kademlia
                     , binary
                     , bytestring
                     , containers
                     , hedgehog
                     , tasty
                     , tasty-discover
                     , tasty-hedgehog
                     , tasty-hunit
                     , text
                     , vector
                     , data-dword
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   tasty-discover:tasty-discover